--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -5,12 +5,28 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.n.carapp.DetailsActivity$PlaceholderFragment">
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
     <TextView
+        android:id="@+id/detailsmain"
         android:text="DetailsMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+
+    <TextView
+        android:id="@+id/namelabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/detailsmain"
+        android:text="Name:"
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/detailsmain"
+        android:layout_toRightOf="@+id/namelabel"
+        android:textSize="25sp" />
 </RelativeLayout>
