--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -11,22 +11,41 @@
         android:id="@+id/detailsmain"
         android:text="DetailsMain"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="25sp"/>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/detailsmain">
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:id="@+id/carImage"
+            android:padding="15dp"
+
+            />
 
 
     <TextView
-        android:id="@+id/namelabel"
+        android:id="@+id/modellabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/detailsmain"
-        android:text="Name:"
+        android:layout_below="@id/carImage"
+        android:text="Model:"
         android:textSize="25sp" />
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/model"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/detailsmain"
-        android:layout_toRightOf="@+id/namelabel"
+        android:layout_below="@id/modellabel"
+
         android:textSize="25sp" />
+
+
+    </LinearLayout>
+
+
+
 </RelativeLayout>
