--- a/app/src/main/res/layout/singleitemview.xml
+++ b/app/src/main/res/layout/singleitemview.xml
@@ -40,4 +40,14 @@
         android:background="#000000"
         android:padding="1dp" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Find Dealership"
+        android:id="@+id/MapButton"
+        android:onClick="startMap"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="66dp" />
+
 </RelativeLayout>
