YouTube Api Commit

--- a/app/src/main/res/layout/singleitemview.xml
+++ b/app/src/main/res/layout/singleitemview.xml
@@ -40,4 +40,12 @@
         android:background="#000000"
         android:padding="1dp" />
 
+    <Button
+        android:id="@+id/videobutton"
+        android:text="Video"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/modellabel"
+        />
+
 </RelativeLayout>
