--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -8,12 +8,16 @@
         android:id="@+id/brandlabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
         android:text="@string/brandlabel" />
 
     <TextView
         android:id="@+id/brand"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
         android:layout_toRightOf="@+id/brandlabel" />
 
     <TextView
@@ -21,6 +25,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/brandlabel"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
         android:text="@string/modellabel" />
 
     <TextView
@@ -28,6 +34,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/brand"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
         android:layout_toRightOf="@+id/modellabel" />
 
 
@@ -38,6 +46,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:background="#000000"
-        android:padding="1dp" />
+        android:padding="2dp" />
 
 </RelativeLayout>
