--- a/app/src/main/res/layout/singleitemview.xml
+++ b/app/src/main/res/layout/singleitemview.xml
@@ -41,14 +41,15 @@
         android:padding="1dp" />
 
     <Button
-<<<<<<< HEAD
+
         android:id="@+id/videobutton"
         android:text="Video"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/modellabel"
         />
-=======
+    <Button
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Find Dealership"
@@ -57,6 +58,6 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="66dp" />
->>>>>>> origin/master
+
 
 </RelativeLayout>
