--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,13 +6,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/black">
 
     <ListView
         android:id="@+id/listViewBrands"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:dividerHeight="0.1dp"
-        android:divider="#0000CC"/>
+        android:background="@color/black"
+        android:divider="@color/white"/>
 
 </LinearLayout>
