--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -2,24 +2,28 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:background="@color/black"
+    >
 
     <TextView
         android:id="@+id/brandlabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-
+        android:paddingTop="6dp"
+        android:paddingBottom="4dp"
+        android:textSize="14sp"
+        android:textColor="@color/white"
         android:text="@string/brandlabel" />
 
     <TextView
         android:id="@+id/brand"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-
+        android:paddingTop="6dp"
+        android:paddingBottom="4dp"
+        android:textSize="14sp"
+        android:textColor="@color/white"
         android:layout_toRightOf="@+id/brandlabel" />
 
     <TextView
@@ -27,9 +31,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/brandlabel"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-
+        android:paddingTop="4dp"
+        android:paddingBottom="6dp"
+        android:textSize="14sp"
+        android:textColor="@color/white"
         android:text="@string/modellabel" />
 
     <TextView
@@ -37,9 +42,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/brand"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-
+        android:paddingTop="4dp"
+        android:paddingBottom="6dp"
+        android:textSize="14sp"
+        android:textColor="@color/white"
         android:layout_toRightOf="@+id/modellabel" />
 
 
