--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -3,5 +3,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.n.carapp.DetailsActivity"
+    tools:context="com.n.carapp.activity.DetailsActivity"
     tools:ignore="MergeRootFrame" />
