--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,5 +7,14 @@
         android:orderInCategory="1"
         android:showAsAction="always"/>
 
+    <item android:id="@+id/add"
+        android:title="Add Car"
+        android:orderInCategory="1"
+        android:showAsAction="always"/>
+    <item android:id="@+id/request"
+        android:title="Request"
+        android:orderInCategory="1"
+        android:showAsAction="always"/>
+
 
 </menu>
