--- a/app/src/main/res/layout/activity_requestlist.xml
+++ b/app/src/main/res/layout/activity_requestlist.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,11 +10,21 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:id="@+id/ReqList"
+       android:text="@string/requestlist"
+       android:textColor="@color/black"
+       android:textSize="20dp"
+       />
+
     <ListView
         android:id="@+id/listViewRequests"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:dividerHeight="0.1dp"
-        android:divider="#0000CC"/>
+        android:divider="#0000CC"
+        android:layout_below="@id/ReqList"/>
 
-</LinearLayout>
+</RelativeLayout>
