--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,12 +9,23 @@
     tools:context=".MainActivity"
     android:background="@color/black">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/cars"
+        android:text="@string/cars"
+        android:textSize="16sp"
+        android:textColor="@color/white"
+        android:layout_centerHorizontal="true"
+        />
+
     <ListView
         android:id="@+id/listViewBrands"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:dividerHeight="0.1dp"
         android:background="@color/black"
-        android:divider="@color/white"/>
+        android:divider="@color/white"
+        android:layout_below="@id/cars"/>
 
-</LinearLayout>
+</RelativeLayout>
