--- a/app/src/main/res/layout/youtubelistview.xml
+++ b/app/src/main/res/layout/youtubelistview.xml
@@ -2,13 +2,29 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/black"
+    >
 
-   <ListView
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="@string/videos"
+       android:textColor="@color/white"
+       android:textSize="16sp"
+       android:id="@+id/videolist"
+       android:background="@color/black"
+       android:layout_centerHorizontal="true"
+       />
+
+    <ListView
+       android:layout_below="@id/videolist"
        android:id="@+id/videolistview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
-
+       android:dividerHeight="0.1dp"
+       android:background="@color/black"
+       android:divider="@color/white"
        />
 
 
