--- a/app/src/main/res/layout/youtubelistviewitem.xml
+++ b/app/src/main/res/layout/youtubelistviewitem.xml
@@ -6,7 +6,11 @@
         android:id="@+id/youtube_model"
         android:padding="20dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/black"
+        android:textColor="@color/white"
+
+    >
 
     </TextView>
 
