--- a/app/src/main/res/layout/addcarfragment.xml
+++ b/app/src/main/res/layout/addcarfragment.xml
@@ -14,31 +14,34 @@
         android:text="@string/Addcar"
         android:textSize="20sp"
         android:id="@+id/Title"
-        android:paddingBottom="20dp"
+        android:paddingBottom="2dp"
         android:textColor="@color/black"
         android:layout_centerHorizontal="true"
         />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/carmodellabel"
         android:textSize="16sp"
-        android:padding="12dp"
         android:text="Car Model:"
         android:layout_below="@id/Title"
         android:textColor="@color/black"
+        android:paddingTop="10dp"
+
         />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/carmodelinput"
-        android:textSize="16sp"
         android:textColor="@color/black"
-        android:layout_below="@+id/Title"
-        android:layout_toEndOf="@+id/carmakelabel"
-        android:layout_toStartOf="@+id/addcarbutton"
-        android:layout_alignEnd="@+id/carmakeinput" />
+        android:layout_toRightOf="@id/carmodellabel"
+        android:layout_below="@id/Title"
+        android:layout_alignBottom="@id/carmodellabel"
+        android:layout_alignEnd="@+id/Title"
+
+        />
 
     <TextView
         android:layout_width="wrap_content"
@@ -46,20 +49,22 @@
         android:id="@+id/carmakelabel"
         android:text="Car Make:"
         android:textSize="16sp"
-        android:padding="12dp"
         android:layout_below="@id/carmodellabel"
         android:textColor="@color/black"
+        android:paddingTop="10dp"
         />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/carmakeinput"
-        android:textSize="16sp"
         android:textColor="@color/black"
-        android:layout_toEndOf="@+id/carmakelabel"
-        android:layout_below="@+id/carmodellabel"
-        android:layout_alignEnd="@+id/addcarbutton" />
+        android:layout_toRightOf="@id/carmodellabel"
+        android:layout_below="@id/carmodelinput"
+        android:layout_alignBottom="@id/carmakelabel"
+        android:layout_alignEnd="@+id/carmodelinput"
+
+        />
 
     <TextView
         android:layout_width="wrap_content"
@@ -67,19 +72,19 @@
         android:id="@+id/youtubekey"
         android:text="YouTube Key:"
         android:textSize="16sp"
-        android:padding="12dp"
-        android:layout_below="@id/carmakelabel"
         android:textColor="@color/black"
+        android:layout_below="@id/carmakelabel"
+        android:paddingTop="10dp"
         />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/youtubekeyinput"
-        android:textSize="16sp"
         android:textColor="@color/black"
-        android:layout_alignTop="@+id/youtubekey"
-        android:layout_toEndOf="@+id/youtubekey"
+        android:layout_toRightOf="@id/youtubekey"
+        android:layout_below="@id/carmakeinput"
+        android:layout_alignBottom="@id/youtubekey"
         android:layout_alignEnd="@+id/carmakeinput" />
 
 
@@ -89,21 +94,21 @@
         android:id="@+id/enginelabel"
         android:text="Engine:"
         android:textSize="16sp"
-        android:padding="12dp"
         android:layout_below="@id/youtubekey"
         android:textColor="@color/black"
+        android:paddingTop="10dp"
         />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/enginelabelinput"
-        android:textSize="16sp"
         android:textColor="@color/black"
+        android:layout_toRightOf="@id/enginelabel"
+        android:layout_below="@id/youtubekeyinput"
+        android:layout_alignBottom="@id/enginelabel"
 
-        android:layout_below="@+id/youtubekey"
-        android:layout_alignEnd="@+id/carmakeinput"
-        android:layout_toEndOf="@+id/enginelabel" />
+        android:layout_alignEnd="@+id/youtubekeyinput" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -111,9 +116,9 @@
         android:id="@+id/sixtyTimelabellabel"
         android:text="Sixty Time:"
         android:textSize="16sp"
-        android:padding="12dp"
-        android:layout_below="@id/enginelabel"
         android:textColor="@color/black"
+        android:layout_below="@id/enginelabel"
+        android:paddingTop="10dp"
         />
 
     <EditText
@@ -122,9 +127,9 @@
         android:id="@+id/sixtyTimelabelinput"
         android:textSize="16sp"
         android:textColor="@color/black"
-
-        android:layout_toEndOf="@+id/carmakelabel"
-        android:layout_alignTop="@+id/sixtyTimelabellabel"
+        android:layout_toRightOf="@id/sixtyTimelabellabel"
+        android:layout_below="@id/enginelabelinput"
+        android:layout_alignBottom="@id/sixtyTimelabellabel"
         android:layout_alignEnd="@+id/enginelabelinput" />
 
 
@@ -134,22 +139,20 @@
         android:id="@+id/topSpeedlabel"
         android:text="Top Speed:"
         android:textSize="16sp"
-        android:padding="12dp"
         android:layout_below="@id/sixtyTimelabellabel"
         android:textColor="@color/black"
+        android:paddingTop="10dp"
         />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/topSpeedinput"
-        android:textSize="16sp"
-        android:layout_toEndOf="@+id/topSpeedlabel"
         android:textColor="@color/black"
-
-        android:layout_below="@+id/sixtyTimelabellabel"
-        android:layout_alignStart="@+id/sixtyTimelabelinput"
-        android:layout_alignEnd="@+id/addcarbutton" />
+        android:layout_toRightOf="@id/topSpeedlabel"
+        android:layout_below="@id/sixtyTimelabelinput"
+        android:layout_alignBottom="@id/topSpeedlabel"
+        android:layout_alignEnd="@+id/sixtyTimelabelinput" />
 
 
     <Button
