--- a/app/src/main/res/layout/youtubelistview.xml
+++ b/app/src/main/res/layout/youtubelistview.xml
@@ -15,6 +15,7 @@
        android:id="@+id/videolist"
        android:background="@color/black"
        android:layout_centerHorizontal="true"
+       android:paddingTop="10dp"
        />
 
     <ListView
